--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "react-image-lightbox": "^5.1.1",
+    "react-validation": "^3.0.7",
+    "validator": "^13.1.1"
   },
   "scripts": {
     "eject": "react-scripts eject",
