--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
     "react-image-lightbox": "^5.1.1",
+    "react-router-dom": "^5.2.0",
     "react-validation": "^3.0.7",
     "validator": "^13.1.1"
   },
@@ -74,6 +74,7 @@
     "jest": "^25.1.0",
     "lint-staged": "^10.0.8",
     "prettier": "^2.0.5",
+    "raw-loader": "^4.0.1",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
