--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-watch": "^6.0.1",
     "file-loader": "^6.0.0",
+    "gulp": "^4.0.2",
     "html-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^4.2.3",
