--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "eslint-watch": "^6.0.1",
     "file-loader": "^6.0.0",
     "gulp": "^4.0.2",
+    "gulp-append-prepend": "^1.0.8",
     "html-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^4.2.3",
